--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,54 @@
 <resources>
     <string name="app_name">Every Cook</string>
+    <string name="title_activity_login">Every Cook</string>
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
+    <string name="password">Password</string>
+    <string name="email_address">Email Address</string>
+    <string name="full_name">Full Name</string>
+    <string name="or">OR</string>
+    <string name="sign_in_with_facebook">Sign in with facebook</string>
+    <string name="username">Username</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="dont_have_account">Don\'t have an account? <b>Sign up.</b></string>
+    <string name="have_account">Already have an account? <b>Sign In.</b></string>
+    <string name="login">Login</string>
+    <string name="phone">Phone</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_event_detail">EventDetailActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="detail">มาเรียนรู้วิธีการสร้างธุรกิจสตาร์ทอัพของตัวเอง รับคำแนะนำจากเหล่าที่ปรึกษามืออาชีพจากแวดวงสตาร์ทอัพ, เทคโนโลยี, การตลาด, และดีไซน์ พบโครงการสนับสนุนการพัฒนาศักยภาพ ทั้งแหล่งทุน เทคโนโลยีจากหน่วยงานในกระทรวงวิทย์ และ Accelerator, VC ภาคเอกชนมากมาย dasdksadiasdakpsnfipasfjpasfjopaskfaspdkspdokdpogkpd sadpokaspodkaspdokaspodkasopdkaspodkasop asodkaspodkaspodkaspodkapsodkasopdkaposdkaopsdkopaskdopask asodkaspodkaposdkpoaskdpoaskdpoaskdpoaskd asopdkapsodkaspodkaspodkaspodkaopsdkopaskdop askdopaskdopaskdopaskdpoaskdopaskdpoaskdpoaskdposkdpodjfgoisdfjbousdfjifdopkvp sdoigjdisfgjdiofghdijdfijfdigjfigjfigjfijogjfigoj fiohjfgijogkjifgjojigrjgofgfkgok rhijfghoifjghiojgirkgirjgurjifjgofko fhoijfgipejkgiodjgosjgopigjfigjfigjirgjifj figjifgjfigfrigjrgoirjgifgjfigjfigjigjigj</string>
+    <string name="facebook_app_id">1162857483847071</string>
+    <string name="fb_login_protocol_scheme">fb1162857483847071</string>
+    <string name="_15dec_n_n20dec">15Dec - 20Dec</string>
+    <string name="eventname">EventName</string>
+    <string name="station">ห้องน้ำ</string>
+    <string name="time">10:00 - 22:00</string>
+    <string name="app">Trade Event</string>
+    <string name="event">Event</string>
+    <string name="coming_soon">Coming Soon</string>
+    <string name="rating">Rating</string>
+    <string name="profile">Profile</string>
+    <string name="sign_in_first_time">Sign in first time?</string>
+    <string name="please_enter_your_phone">Please enter your phone</string>
+    <string name="name">Bawonsak Petchbunjerdkul</string>
+    <string name="phones">097-086-2773</string>
+    <string name="_0">0</string>
+    <string name="ratingUp">ให้คะแนนผู้ใช้ ?</string>
+    <string name="nick_name">Nick Name</string>
+    <string name="log_out">Log out</string>
+    <string name="_1dec_7dec">1Dec - 7Dec</string>
+    <string name="_10_00_22_00">10:00 - 22:00</string>
 </resources>
